fix: :bug: always show scrollbar to prevent layout shift between page navigations

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-  overflow: hidden;
-} */
+body {
+  overflow-y: scroll;
+}
